Added APOD using retrofit

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,7 +28,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:imgUrl="@{viewModel.imgUrl}"
+                app:imgUrl="@{viewModel.apod.url}"
                 app:srcCompat="@drawable/placeholder_picture_of_day"/>
 
             <TextView
